# is-prime-for-primitive-int

./: .gitlab-ci.yml  Cargo.toml  README.md
src/: lib.rs
